<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/doctorListColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/add_tip"
        android:textColor="@color/titleColor"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/titleAddTips"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@drawable/edit_background"
        android:hint="@string/tip_title_hit"
        android:padding="10dp"
        android:textColor="@color/titleColor"
        android:textColorHint="@color/descriptionTitleColor"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/contentTips"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@drawable/edit_background"
        android:gravity="top|left"
        android:hint="@string/tip_content_hit"
        android:padding="10dp"
        android:textColor="@color/titleColor"
        android:textColorHint="@color/descriptionTitleColor"
        android:textSize="20dp"
        android:textStyle="italic" />

    <Button

        android:id="@+id/addNewTip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@drawable/button_background"
        android:text="@string/add_now_hit"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@drawable/edit_background"
        android:text="@string/cancel_ht"
        android:textColor="@color/titleColor" />

</LinearLayout>


